# game_engine

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
app/src/: main.cpp
engine/: CMakeLists.txt  engine.h
engine/platform/linux/: input.cpp  input.h  window.cpp  window.h
engine/src/: application.cpp  application.h  entryPoint.h  input.h  keyCodes.h  logger.cpp  logger.h  window.h
engine/src/events/: appEvents.h  event.h  events.h  keyEvents.h  mouseEvents.h  windowEvents.h
engine/src/layers/: imguiLayer.cpp  imguiLayer.h  layer.h  layerStack.h  layers.h
engine/src/pch/: pch.cpp  pch.h
